--- a/Frontend/src/Records/records.css
+++ b/Frontend/src/Records/records.css
@@ -14,9 +14,7 @@
 .sightings-table {
   border-collapse: collapse;
   font-size: 14px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  background-color: #1e1e24;
   color: white;
   table-layout: auto;
   width: 100%;
@@ -64,8 +62,8 @@
 }
 
 .sightings-table td.actions-cell {
-  width: 250px;
-  min-width: 250px;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 td.actions-cell>button {
@@ -204,7 +202,6 @@ textarea.modal-input {
 }
 
 .search-input {
-  margin: 10px 21px;
   padding: 10px;
   width: 40%;
   /* Ajusta el ancho según sea necesario */
@@ -220,7 +217,6 @@ textarea.modal-input {
   padding: 1rem;
   flex: 1;
   display: flex;
-  margin-bottom: 70px;
 }
 
 .prev-page,
@@ -229,7 +225,7 @@ textarea.modal-input {
   color: #00bcd4;
   border: 1px solid #00bcd4;
   border-radius: 4px;
-  padding: 5px 10px;
+  padding: 0.5rem 1rem;
   cursor: pointer;
   font-size: 14px;
   transition: all 0.3s ease;
@@ -238,6 +234,7 @@ textarea.modal-input {
 .pagination{
  padding: 1rem;
 }
+
 .pagination-controls {
   display: flex;
   align-items: center;
@@ -246,7 +243,7 @@ textarea.modal-input {
 }
 
 .filters {
-  margin: 1rem 0;
+  padding: 1rem;
 }
 
 .table-container {
@@ -260,9 +257,15 @@ textarea.modal-input {
 
 @media (max-width: 768px) {
 
-  .main-content {
-    margin: 70px 0;
+  #registro {
+    background: none;
+    box-shadow: none;
   }
+
+  .main-content {
+    margin-top: 70px;
+  }
+
   .sightings-table thead {
     display: none;
     /* Ocultar encabezados de tabla en móviles */
@@ -271,31 +274,30 @@ textarea.modal-input {
   .sightings-table tbody tr {
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
+    margin-bottom: 0.5rem;
     border: 1px solid #3d3d3d;
     border-radius: 8px;
-    padding: 10px;
+    padding: 1rem;
     background-color: #1e1e24;
   }
 
   .sightings-table tbody td {
-    display: block;
     width: 100%;
-    box-sizing: border-box;
     padding: 5px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: right;
+    font-size: 1em;
+    border: none;
   }
 
   .sightings-table tbody td::before {
     content: attr(data-label);
+    display: inline-block;
     font-weight: bold;
-    display: block;
-    margin-bottom: 5px;
+    margin-right: 1rem;
     color: #00bcd4;
-  }
-
-  .sightings-table {
-    display: block;
-    overflow-x: auto;
   }
 
   .modal-content {
@@ -330,6 +332,7 @@ textarea.modal-input {
     padding: 1rem;
     flex: 1;
     display: flex;
+    margin-bottom: 60px;
   }
 
   .form-group.full-width {
@@ -352,33 +355,32 @@ textarea.modal-input {
     /* Ocultar encabezados de tabla en móviles */
   }
 
-  .sightings-table tbody tr.small-screen td {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 0;
-    text-align: right;
-  }
-
-  .sightings-table tbody tr.small-screen td::before {
-    content: attr(data-label);
-    font-weight: bold;
-    margin-right: 30px;
-    color: #00bcd4;
+  .sightings-table td.actions-cell {
+    width: unset;
+    margin-top: 0.75rem;
+    padding-block: 0;
   }
 
   .ubicacion-cell {
-    max-width: none;
-
+    max-width: unset;
+    min-width: unset;
+    width: unset;
   }
 
-  .sightings-table tbody tr:nth-child(odd) {
-    margin-top: 15px;
-  }
+  .pagination{
+    padding: 0;
+    padding-block: 1rem;
+   }
 
-  .sightings-table td.actions-cell {
-    width: 70%;
-  }
+   .filters {
+    padding: 0;
+    padding-block: 1rem;
+   }
 
-
+   .search-input {
+    width: 100%;
+    font-size: 1em;
+    height: unset;
+    padding: 1rem;
+   }
 }
