--- a/Frontend/src/Register/register.css
+++ b/Frontend/src/Register/register.css
@@ -44,7 +44,7 @@ body {
 }
 
 .form-card {
-  background-color: var(--background-color);
+  background-color: var(--translucent-background-color);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-radius: 12px;
@@ -274,7 +274,7 @@ input[type="number"] {
 }
 
 .success-message {
-  background-color: var(--background-color);
+  background-color: var(--translucent-background-color);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-radius: 12px;
