--- a/Frontend/src/assets/css/variables.css
+++ b/Frontend/src/assets/css/variables.css
@@ -6,6 +6,7 @@
     --secondary-color: #f0f0f0;
     --background-color: #26252A;
     --form-background-color: rgba(38, 37, 42, 0.95);
+    --translucent-background-color: rgba(0, 0, 0, 0.75);
     --text-color: #ffffff;
     --text-muted: #ababab;
     --input-background: rgba(255, 255, 255, 0.1);
