Estilos botones form

--- a/Frontend/src/Index/index.css
+++ b/Frontend/src/Index/index.css
@@ -580,8 +580,7 @@ form button:hover {
     }
 
     .btn {
-        flex: 1;
-        min-width: 0;
+       width: 100%;
     }
 }
 
@@ -783,17 +782,15 @@ form button:hover {
     }
 
     .form-buttons {
-        padding: 1rem;
-        background-color: rgba(38, 37, 42, 0.95);
-        backdrop-filter: blur(10px);
+        padding-block: 1rem;
         margin: 0;
         gap: 0.5rem;
     }
 
     .btn {
-        flex: 1;
-        padding: 0.75rem;
-        min-width: 0;
+        flex-grow: 1;
+        padding: 1.15em;
+        font-size: 1em;
     }
 
     /* Adjust overlay for mobile */
